docs: remove Java8-scan keywords from repository docs